Bug fix. Image aligned in center and max-height.

--- a/public/css/style_alex.css
+++ b/public/css/style_alex.css
@@ -1947,6 +1947,10 @@ ul.activity-timeline > li:last-child:after {
 
 .event-logo-edit {
     max-width: 100%;
+    max-height: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .event-logo-edit-caption {
